# VEX-U_2018-V5

./: .gitignore  API.mdj  CMakeLists.txt  Makefile  Project.mdj  README.md  State Machines.mdj  StateTransitionDiagram.mdj  VEX-U_2018-V5.sublime-project  VEX-U_2018-V5.sublime-workspace  build.bat  compile_commands.json  project.pros  upload.bat
blank/: blank.cpp  v5_files_include.cpp
emulator/src/: emulator.cpp  motors.cpp
include/: api.h
include/afr-lib/: action.h  afr-lib.h  commandable.h  defines.h  nameable.h  operation.h  scheduled.h  state.h  state_controller.h
include/afr-vexu-lib/: SerialManager.h  StateController.h  SubsystemController.h  action.h  afr-vexu-lib.h  auto_state_controller.h  cached_operation.h  commandable.h  defines.h  identifier_e.h  operation.h  ordered_input.h  ordered_readable.h  ports_list.h  readable.h  scheduled.h  scheduled_list.h  serial_manager.h  state.h  state_controller.h  subsystem_controller.h  transition.h  value.h
include/afr-vexu-lib/auto-drive/: auto_drive.h
include/afr-vexu-lib/base-action/: bidirectional_control_action.h  bounded_value_action.h  dead_band_action.h  deadband_action.h  equivalent_value_action.cpp  equivalent_value_action.h  hysteresis_action.h  intake_action.cpp  intake_action.h  intake_control_action.cpp  intake_control_action.h  pid_action.h  set_value_action.cpp  set_value_action.h  targetable.h  zero_encoder_action.h
include/afr-vexu-lib/base-commandable/: adi_analog_commandable.h  adi_digital_commandable.h  controller_commandable.h  motor_commandable.h  multi_commandable.h  multi_motor_commandable.h
include/afr-vexu-lib/base-readable/: adi_analog_readable.h  adi_digital_readable.h  adi_encoder_readable.h  averager.h  battery_capacity_readable.h  battery_current_readable.h  battery_readable.h  competition_readable.h  controller_readable.h  digital_debounce.h  digital_edge_detector.h  motor_current_readable.h  motor_encoder_readable.h  motor_encoder_velocity_readable.h  motor_temperature_readable.h
include/afr-vexu-lib/base_action/: equivalent_value_action.h  set_value_action.h
include/afr-vexu-lib/comms/: DataTable.h  Packet.h  RingBuffer.h  serial_manager.h
include/afr-vexu-lib/vision/: vision_targeting.h
include/drive/: drive.h
include/emulator/: data.h  emulator.h
include/fuego/: auto.h  fuego.h  robot.h
include/fuego/ball-intake/: ball_intake.h
include/fuego/cap/: cap.h  intake_control_action.h  wrist_flip_action.h
include/fuego/cap/arm/: arm.h
include/fuego/drive/: drive.h
include/fuego/shooter/: shooter.h
include/pros/: adi.h  adi.hpp  apix.h  misc.h  misc.hpp  motors.hpp  rtos.h  rtos.hpp  vision.h  vision.hpp
include/rev/: auto.h  rev.h
include/rev/ball-intake/: ball_intake.h
include/rev/cap/: cap.h
include/rev/drive/: drive.h
include/rev/shooter/: shooter.h
include/robot/: robot.h
include/robot/cap/: cap.h  intake_action.h
include/robot/catapult/: catapult.h
include/robot/drive/: arcade_drive_action.h  drive.h
include/robot/shooter/: deadbandinputcontroller.h  joystick.h  shooter.h
include/robot2/: auto.h  robot.h
include/robot2/ball-intake/: ball_intake.h
include/robot2/cap/: cap.h
include/robot2/drive/: arcade_drive_action.h  drive.h
include/robot2/shooter/: joystick.h  shooter.h
src/: Action.h  Identifier.h  OrderedInput.h  Readable.h  Scheduled.h  StateController.h  SubsystemController.h  autonomous.cpp  initialize.cpp  opcontrol.cpp
src/afr-lib/: CMakeLists.txt  afr-lib.cpp  nameable.cpp  ports_list.cpp  scheduled.cpp  state.cpp
src/afr-vexu-lib/: CMakeLists.txt  SerialManager.cpp  StateController.cpp  SubsystemController.cpp  action.cpp  afr-vexu-lib.cpp  cached_operation.cpp  commandable.cpp  identifier_e.cpp  operation.cpp  ordered_input.cpp  ordered_readable.cpp  ports_list.cpp  readable.cpp  scheduled.cpp  scheduled_list.cpp  serial_manager.cpp  state.cpp  state_controller.cpp  subsystem_controller.cpp  transition.cpp  value.cpp
src/afr-vexu-lib/auto-drive/: auto_drive.cpp
src/afr-vexu-lib/base-action/: CMakeLists.txt  equivalent_value_action.cpp  intake_control_action.cpp
src/afr-vexu-lib/base-commandable/: CMakeLists.txt  adi_analog_commandable.cpp  adi_digital_commandable.cpp  controller_commandable.cpp  motor_commandable.cpp
src/afr-vexu-lib/base-readable/: CMakeLists.txt  adi_analog_readable.cpp  adi_digital_readable.cpp  adi_encoder_readable.cpp  battery_capacity_readable.cpp  battery_readable.cpp  competition_readable.cpp  controller_readable.cpp  digital_debounce.cpp  digital_edge_detector.cpp  motor_current_readable.cpp  motor_encoder_readable.cpp  motor_encoder_velocity_readable.cpp  motor_temperature_readable.cpp
src/afr-vexu-lib/comms/: CMakeLists.txt  DataTable.cpp  Packet.cpp  RingBuffer.cpp  serial_manager.cpp
src/afr-vexu-lib/vision/: vision_targeting.cpp
src/fuego/: CMakeLists.txt  auto.cpp  fuego.cpp  robot.cpp
src/fuego/ball-intake/: CMakeLists.txt  ball_intake.cpp
src/fuego/cap/: CMakeLists.txt  cap.cpp
src/fuego/drive/: CMakeLists.txt  arcade_drive_action.cpp  drive.cpp
src/fuego/shooter/: CMakeLists.txt  shooter.cpp
src/lib/: Actuator.h
src/rev/: CMakeLists.txt  auto.cpp  rev.cpp
src/rev/ball-intake/: CMakeLists.txt  ball_intake.cpp
src/rev/cap/: CMakeLists.txt  cap.cpp
src/rev/drive/: CMakeLists.txt  drive.cpp
src/rev/shooter/: CMakeLists.txt  shooter.cpp
src/robot/: CMakeLists.txt  robot.cpp
src/robot/cap/: CMakeLists.txt  cap.cpp  intake_action.cpp
src/robot/catapult/: CMakeLists.txt  catapult.cpp
src/robot/drive/: CMakeLists.txt  arcade_drive_action.cpp  drive.cpp
src/robot/shooter/: deadbandinputcontroller.cpp  joystick.cpp  shooter.cpp
src/robot2/: CMakeLists.txt  auto.cpp  robot.cpp
src/robot2/ball-intake/: CMakeLists.txt  ball_intake.cpp
src/robot2/cap/: CMakeLists.txt  cap.cpp
src/robot2/drive/: CMakeLists.txt  arcade_drive_action.cpp
src/robot2/shooter/: CMakeLists.txt  joystick.cpp  shooter.cpp
test/: api_test.cpp
(+77 files in other folders)
